Attempting to fix horizontal scroll of mobile window

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -81,6 +81,7 @@
 
 		.workContentContainer {
 			margin-top: 5px;
+			width: 100vw;
 		}
 
 		.scrollMenu {
